# bazel-catalog

./: .gitattributes  .gitignore  BUILD.bazel  MODULE.bazel  README.md  collect_gitstats.sh  go.mod  index.md  package.json  pnpm-lock.yaml  rulesets.json  rulesets.schema.json
.github/workflows/: render.yml
BLAKE3-team/BLAKE3/: index.md
BalderOdinson/rules_cuda/: index.md
DataDog/rules_oci_bootstrap/: index.md
GZGavinZhao/gzgz_rules_sass/: index.md
GoogleContainerTools/container-structure-test/: index.md
LMDB/lmdb/: index.md
MobileNativeFoundation/rules_xcodeproj/: index.md
Tencent/rapidjson/: index.md
Tessil/robin-map/: index.md
abseil/abseil-cpp/: index.md
abseil/abseil-py/: index.md
acqio/rules_microsoft_azure/: index.md
apple/apple_rules_lint/: index.md
apple/swift-argument-parser/: index.md
aspect-build/bazel-lib/: index.md
aspect-build/rules_esbuild/: index.md
aspect-build/rules_jasmine/: index.md
aspect-build/rules_jest/: index.md
aspect-build/rules_js/: index.md
aspect-build/rules_py/: index.md
aspect-build/rules_rollup/: index.md
aspect-build/rules_swc/: index.md
aspect-build/rules_terser/: index.md
aspect-build/rules_ts/: index.md
bazel-contrib/bazel_features/: index.md
bazel-contrib/rules_bazel_integration_test/: index.md
bazel-contrib/rules_jvm/: index.md
bazel-contrib/rules_oci/: index.md
bazelbuild/apple_support/: index.md
bazelbuild/bazel-gazelle/: index.md
bazelbuild/bazel-skylib/: index.md
bazelbuild/rules_android/: index.md
bazelbuild/rules_appengine/: index.md
bazelbuild/rules_apple/: index.md
bazelbuild/rules_cc/: index.md
bazelbuild/rules_closure/: index.md
bazelbuild/rules_d/: index.md
bazelbuild/rules_docker/: index.md
bazelbuild/rules_dotnet/: index.md
bazelbuild/rules_foreign_cc/: index.md
bazelbuild/rules_fuzzing/: index.md
bazelbuild/rules_go/: index.md
bazelbuild/rules_groovy/: index.md
bazelbuild/rules_gwt/: index.md
bazelbuild/rules_java/: index.md
bazelbuild/rules_jsonnet/: index.md
bazelbuild/rules_jvm_external/: index.md
bazelbuild/rules_k8s/: index.md
bazelbuild/rules_kotlin/: index.md
bazelbuild/rules_license/: index.md
bazelbuild/rules_nodejs/: index.md
bazelbuild/rules_perl/: index.md
bazelbuild/rules_pkg/: index.md
bazelbuild/rules_postcss/: index.md
bazelbuild/rules_proto/: index.md
bazelbuild/rules_python/: index.md
bazelbuild/rules_rust/: index.md
bazelbuild/rules_sass/: index.md
bazelbuild/rules_scala/: index.md
bazelbuild/rules_swift/: index.md
bazelbuild/rules_testing/: index.md
bazelbuild/rules_webtesting/: index.md
bazelbuild/stardoc/: index.md
bazelruby/rules_ruby/: index.md
buildfoundation/bazel_rules_detekt/: index.md
c-ares/c-ares/: index.md
catchorg/Catch2/: index.md
cgrindel/bazel-starlib/: index.md
cgrindel/rules_swift_package_manager/: index.md
chriskohlhoff/asio/: index.md
coinbase/rules_ruby/: index.md
drmohundro/SWXMLHash/: index.md
dropbox/dbx_build_tools/: index.md
filters/: BUILD.bazel  adoption_score.jq  defs.bzl  ghrepo.jq  maintainers.jq  maintenance_score.jq  merge_bcr.jq  release_data.jq  repo_data.jq  search_by_repo.jq  stability_score.jq  tag_data.jq
fmtlib/fmt/: index.md
gabime/spdlog/: index.md
gflags/gflags/: index.md
gitstats/: index.md
google/benchmark/: index.md
google/boringssl/: index.md
google/glog/: index.md
google/go-jsonnet/: index.md
google/googletest/: index.md
google/jsonnet/: index.md
google/re2/: index.md
google/zopfli/: index.md
grailbio/bazel-compilation-database/: index.md
grailbio/bazel-toolchain/: index.md
grailbio/rules_r/: index.md
grpc/grpc/: index.md
hdl/bazel_rules_hdl/: index.md
jmillikin/rules_bison/: index.md
jmillikin/rules_flex/: index.md
jmillikin/rules_m4/: index.md
jmillikin/rules_ragel/: index.md
jpsim/SourceKitten/: index.md
jpsim/Yams/: index.md
keith/buildifier-prebuilt/: index.md
keith/rules_apple_linker/: index.md
keith/rules_multirun/: index.md
kkiningh/rules_verilator/: index.md
luben/zstd-jni/: index.md
madler/zlib/: index.md
nelhage/rules_boost/: index.md
nlohmann/json/: index.md
oxidase/rules_poetry/: index.md
protocolbuffers/protobuf/: index.md
protocolbuffers/upb/: index.md
rabbitmq/looking_glass/: index.md
rabbitmq/lz4-erlang/: index.md
rabbitmq/rules_erlang/: index.md
scripts/: add_maintainer.sh  collect_github_stats.sh  collect_gitstats.sh  generate_ghpages.sh  merge_bcr_metadata.sh  render_ghpages.sh
stats/: updated.txt
(+2486 files in other folders)
