load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//:ajv-cli/package_json.bzl", ajv = "bin")

npm_link_all_packages(name = "node_modules")

ajv.ajv_test(
    name = "test",
    args = [
        "validate",
        "-s",
        "$(execpath rulesets.schema.json)",
        "-d",
        "$(execpath rulesets.json)",
    ],
    data = [
        "rulesets.json",
        "rulesets.schema.json",
    ],
)