"Bazel dependencies"
bazel_dep(name = "aspect_rules_js", version = "1.17.0")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)

npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
)

use_repo(npm, "npm")

bazel_dep(name = "gazelle", version = "0.27.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

bazel_dep(name = "rules_proto", version = "4.0.0")

# repo_name must be set here, as gazelle has a preference to the non bzlmod names.
bazel_dep(name = "rules_go", version = "0.38.1", repo_name = "io_bazel_rules_go")
bazel_dep(name = "protobuf", version = "3.19.6", repo_name = "com_google_protobuf")

bazel_dep(name = "bazel_skylib", version = "1.4.1")

non_module_dependencies = use_extension("@io_bazel_rules_go//go/private:extensions.bzl", "non_module_dependencies")
use_repo(
    non_module_dependencies,
    "go_googleapis",
    "io_bazel_rules_nogo",
)
